test/fails/bad_tags/decl1.lgl
tag a is b; // Undeclared b